# MCUProject

./: .gitignore  CMakeLists.txt  Kmenuconfig  README.md  build.sh  buildenv.sh
App/: CMakeLists.txt  main.c
board/: CMakeLists.txt  regio.c
board/stm32f407/: CMakeLists.txt  board.cmake  board.ld  export.sh  openocd.cfg  startup_stm32f407xx.s  stm32_hal_init.c  stm32_hal_init.h  stm32_hal_it.c  stm32f4xx_hal_conf.h  stm32f4xx_it.c
board/stm32f407/rtthread/: board.c  rtconfig.h
drivers/rt-thread/Inc/: drv_uart.h
hal/: CMakeLists.txt
hal/stm32/: CMakeLists.txt
hal/stm32/STM32F4xx/: CMakeLists.txt
lichee/: CMakeLists.txt
lichee/rt-thread/: CMakeLists.txt
lichee/rt-thread/components/finsh/: finsh_port.c
scripts/: kconfig.py
